# duckdb-fork-spark-compat

./: .gitignore  CMakeLists.txt  README.md
src/parser/: CMakeLists.txt  parser.cpp
src/parser/peg/: CMakeLists.txt  autocomplete_core.cpp  keyword_helper.cpp  keyword_map.cpp  matcher.cpp  parser_packrat.cpp  peg_parser.cpp  sql_formatter.cpp
src/parser/peg/grammar/keywords/: column_name_keyword.list  func_name_keyword.list  (+3 more)
src/parser/peg/tokenizer/: CMakeLists.txt  base_tokenizer.cpp  highlight_tokenizer.cpp  parser_tokenizer.cpp
src/parser/peg/transformer/: CMakeLists.txt  peg_transformer.cpp  peg_transformer_factory.cpp  transform_alter.cpp  transform_analyze.cpp  transform_attach.cpp  transform_call.cpp  transform_checkpoint.cpp  transform_comment.cpp  transform_common.cpp  transform_connect.cpp  transform_copy.cpp  transform_create_index.cpp  transform_create_macro.cpp  transform_create_schema.cpp  transform_create_secret.cpp  transform_create_sequence.cpp  transform_create_table.cpp  transform_create_trigger.cpp  transform_create_type.cpp  transform_create_view.cpp  transform_deallocate.cpp  transform_declare.cpp  transform_delete.cpp  transform_describe.cpp  transform_detach.cpp  transform_drop.cpp  transform_execute.cpp  transform_explain.cpp  transform_export.cpp  transform_expression.cpp  transform_generated.cpp  transform_generated_trampoline.cpp  transform_generic_copy_option.cpp  transform_insert.cpp  transform_load.cpp  transform_merge_into.cpp  transform_pivot.cpp  transform_pragma.cpp  transform_prepare.cpp  (+6 more)
src/parser/tableref/: pivotref.cpp
(+86 files in other folders)
